src/objects/Branch_Production__c.object
<CustomObject>
    <fields>
        <fullName>ACATs__c</fullName>
        <label>ACATs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assets_Out_YTD__c</fullName>
        <label>Assets Out YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assets_in_YTD__c</fullName>
        <label>Assets in YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avg_Ticket_Size__c</fullName>
        <label>Avg Ticket Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Branch_Code__c</fullName>
        <externalId>true</externalId>
        <label>Branch Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch / Region</label>
        <referenceTo>Branch_Region__c</referenceTo>
        <relationshipLabel>Branch Productions</relationshipLabel>
        <relationshipName>Branch_Productions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCNA_MTD__c</fullName>
        <label>CCNA MTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCNA_QTD__c</fullName>
        <label>CCNA QTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCNA_YTD__c</fullName>
        <label>CCNA YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Quarter_End_T_12_Production__c</fullName>
        <label>Last Quarter End T-12 Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branch_Productions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Owner_ID__c</fullName>
        <label>Legacy Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTD_Production_Goal__c</fullName>
        <label>MTD Production Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_Production_Pct_of_Goal__c</fullName>
        <label>MTD Production % of Goal</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MTD_Production__c</fullName>
        <label>MTD Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NCNA_MTD__c</fullName>
        <label>NCNA MTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NCNA_QTD__c</fullName>
        <label>NCNA QTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NCNA_YTD__c</fullName>
        <label>NCNA YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Assets_Goal__c</fullName>
        <label>Net Assets Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Assets_YTD__c</fullName>
        <label>Net Assets YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Accounts_MTD__c</fullName>
        <label>New Accounts MTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Accounts_QTD__c</fullName>
        <label>New Accounts QTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Accounts_YTD__c</fullName>
        <label>New Accounts YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Year_YTD_Production__c</fullName>
        <label>Previous Year YTD Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QTD_Production_Goal__c</fullName>
        <label>QTD Production Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QTD_Production_Pct_of_Goal__c</fullName>
        <label>QTD Production Pct of Goal</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>QTD_Production__c</fullName>
        <label>QTD Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ROA_Pct__c</fullName>
        <label>ROA %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>T_12_Production__c</fullName>
        <label>T-12 Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ticket_Count__c</fullName>
        <label>Ticket Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Accounts__c</fullName>
        <label>Total Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Current_Assets__c</fullName>
        <label>Total Current Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YOY_Difference_Pct__c</fullName>
        <label>YOY Difference %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YOY_Difference__c</fullName>
        <label>YOY Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Production_Goal__c</fullName>
        <label>YTD Production Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Production_Pct_of_Goal__c</fullName>
        <label>YTD Production Pct of Goal</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YTD_Production__c</fullName>
        <label>YTD Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Branch Production</label>
    <nameField>
        <label>Branch Production Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branch Productions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>